[tool.poetry]
name = "gold_sale_backend"
version = "0.1.0"
description = ""
authors = ["Euphemia Deathridge <ephdtrg@mintyclouds.in>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
bip32utils = "^0.3.post4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
